team gap fix and fly movement close

--- a/style.css
+++ b/style.css
@@ -1105,6 +1105,9 @@ box-shadow:         0px 1px 3px 0px rgba(0, 0, 0, 0.27);
 -o-transition:All 1s ease;
 border: 4px solid transparent;
 }
+.team-box .team-player.no{
+  margin-bottom: 0px;
+}
 .team-box .team-player:hover{
 	transform: scale(1.3);
 	-webkit-transform: scale(1.3) ;
@@ -1152,7 +1155,7 @@ border: 4px solid transparent;
 	position: absolute;
 	top:94px;
 	text-align: center;
-	left:98%;
+	left:50%;
 	font-size: 10px;
 	width: 23px;
 	height: 17px;
@@ -1161,45 +1164,10 @@ border: 4px solid transparent;
 	-webkit-transform:translate(-50%, -50%);
 	-moz-transform:translate(-50%, -50%);
 	transform:translate(-50%, -50%);
-	-webkit-animation: fly 10s linear infinite;
- 	 -moz-animation: fly 10s linear infinite;
-  	-ms-animation: fly 10s linear infinite;
-  	animation: fly 10s linear infinite;
 	z-index: 2;
 	opacity: 0;
 }
-@-webkit-keyframes fly {
-	0%{
-		left: 98%;
-	}
-	100%{
-		left: 2%;
-	}
-}
-@-moz-keyframes fly {
-	0%{
-		left: 98%;
-	}
-	100%{
-		left: 2%;
-	}
-}
-@-ms-keyframes fly {
-	0%{
-		left: 98%;
-	}
-	100%{
-		left: 2%;
-	}
-}
-@keyframes fly {
-	0%{
-		left: 98%;
-	}
-	100%{
-		left: 2%;
-	}
-}
+
 .team-box .gap{
 	width: 203px;
 	display: inline-block; 
